--- a/Frontend/src/Pages/Home/Home.css
+++ b/Frontend/src/Pages/Home/Home.css
@@ -1,9 +1,8 @@
-html{
+html {
   background-color: black;
 }
-*{
+* {
   font-family: "Poppins", sans-serif;
-
 }
 
 .chat-app {
@@ -11,29 +10,32 @@ html{
   flex-direction: column;
   align-items: center;
   background-color: black;
+  height: 100vh;
 }
 
 .chat-container {
   display: flex;
   /* width: 80%; */
-  width: 97%;
+  width: 100%;
   /* border: 1px solid #ddd; */
   border-radius: 8px;
   overflow: hidden;
-  gap: 5px;
-  margin: 10px 10px 10px 10px;
+  gap: 1px;
+  /* margin: 10px 10px 10px 10px; */
 }
 
 .chat-list {
   /* width: 30%; */
   max-width: 30%;
   min-width: fit-content;
-  height: 95vh;
+  /* height: 95vh; */
+  height: 100vh;
   background-color: #000000;
-  padding: 20px;
+  /* padding: 20px; */
+  padding: 15px 15px 15px 15px;
   overflow-y: auto;
   border: 1px solid #2b2b2b;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 .chat-list h2 {
@@ -61,7 +63,8 @@ html{
 }
 
 .user-details .user-name {
-  font-weight: bold;
+  /* font-weight: bold; */
+  font-size: 1rem;
 }
 
 .user-details .user-username {
@@ -70,7 +73,7 @@ html{
 }
 
 .chat-window {
-  width: 70%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   /* border: 1px solid #ddd; */
@@ -106,6 +109,20 @@ html{
 .message.outgoing {
   background-color: #bee3f8;
   align-self: flex-end;
+}
+.message.outgoing p {
+  word-wrap: break-word; /* Forces long words to break */
+  word-break: break-word; /* Additional breaking rules */
+  overflow-wrap: break-word; /* Ensures proper wrapping */
+  white-space: normal; /* Ensures text wraps to the next line */
+  max-width: 100%;
+}
+.message.incoming p {
+  word-wrap: break-word; /* Forces long words to break */
+  word-break: break-word; /* Additional breaking rules */
+  overflow-wrap: break-word; /* Ensures proper wrapping */
+  white-space: normal; /* Ensures text wraps to the next line */
+  max-width: 100%;
 }
 
 .message small {
@@ -206,6 +223,7 @@ html{
 /* Container styles */
 .message-input-container {
   display: flex;
+  flex-direction: row;
   align-items: center;
   background-color: #ffffff;
   border-bottom-left-radius: 10px;
@@ -218,6 +236,16 @@ html{
   border-top: 1px solid #cecece;
 }
 
+form button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  padding: 0;
+  margin: 0 7px 0 0px;
+  border-radius: 5px;
+  background:transparent;
+}
 /* Input field styles */
 .message-input {
   flex: 1;
@@ -225,9 +253,10 @@ html{
   outline: none;
   background-color: transparent;
   color: #737373;
-  font-size: 16px;
+  /* font-size: 16px; */
   margin-left: 10px;
   margin-right: 10px;
+  width: 100%;
 }
 
 /* Icon styles */
@@ -239,12 +268,34 @@ html{
 ::-webkit-scrollbar {
   display: none;
 }
-svg{
-  margin-right:10px ;
+svg {
+  margin-right: 10px;
 }
 
-@media (min-width: 600){
-  .chat-list{
+@media (min-width: 600) {
+  .chat-list {
     padding: 0px !important;
   }
-} 
+}
+
+@media (max-width: 600px) {
+  .user-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 0px !important;
+  }
+  .chat-list {
+    padding: 0px !important;
+  }
+  .message-input-container {
+    padding: 5px !important;
+    margin-bottom: 5px;
+  }
+  .message {
+    font-size: x-small;
+  }
+  * {
+    font-size: small;
+  }
+}
