--- a/Frontend/src/Pages/PostsData/Posts.css
+++ b/Frontend/src/Pages/PostsData/Posts.css
@@ -6,8 +6,6 @@
   /* font-variation-settings: "wdth" 100; */
 }
 #SubmitPostUi {
- 
-
   /* justify-content: center;
   align-items: center;
   height: 60vh;
@@ -31,7 +29,6 @@
   right: 15%;
   border-radius: 20px;
   z-index: 100;
-
 }
 
 h1,
@@ -51,7 +48,7 @@ h2 {
 
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
- 
+
   width: 500px;
   margin: auto;
   background-color: rgb(0, 0, 0);
@@ -65,6 +62,8 @@ h2 {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding: 10px 10px 10px 1px;
+  max-width: 95%;
+  margin: auto;
 }
 
 .profile-pic {
@@ -120,10 +119,12 @@ h2 {
 .post-image {
   width: 100%;
   /* max-height: 650px; */
-  object-fit: cover;
+  object-fit: contain;
   border: 1px solid #777777;
   border-radius: 5px;
-height: min-content;
+  height: min-content;
+  border: 1px solid #777777 !important;
+  aspect-ratio: 4 / 5;
 }
 
 .post-footer {
@@ -147,14 +148,12 @@ button:hover {
   background-color: #0056b3;
 }
 
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   /* font-family: Arial, Helvetica, sans-serif; */
 }
-
 
 .instagram-clone {
   display: flex;
@@ -214,6 +213,9 @@ a {
 .menu div:hover {
   color: #aaa;
 }
+.menu li a:hover {
+  color: #aaa;
+}
 
 .menu li {
   padding: 10px 0;
@@ -222,9 +224,9 @@ a {
   width: 150px;
 }
 
-.menu li:hover {
+/* .menu li:hover {
   color: #aaa;
-}
+} */
 
 /* Main Content */
 .main-content {
@@ -266,6 +268,7 @@ a {
 
 .post {
   margin-top: 20px;
+  box-shadow: none;
 }
 
 .post-header {
@@ -358,7 +361,6 @@ h6 {
   color: black;
   width: 23vw !important;
   background-color: #d6d6d6;
-  
 }
 
 .SubmitPostUi input[type="file"] {
@@ -398,7 +400,7 @@ h6 {
   border: none;
 }
 .user-item:hover {
-  background-color: #570f0f;
+  background-color: #7d7d7d;
   transition: 0.5s ease-in-out;
 }
 
@@ -435,7 +437,8 @@ aside .h1 {
   margin-right: auto;
   font-weight: bold;
   color: white; */
-  width: 185px;
+  /* width: 185px; */
+  width: 200px;
   font-weight: bold;
   color: white;
   font-weight: bold;
@@ -465,11 +468,27 @@ a {
 
 a:hover {
   /* background-color: #777777; */
-  background-color: #363636;
+  background-color: #838383 !important;
   color: rgb(255, 255, 255);
 
   transition: 0.3s ease-in-out;
 }
+
+.menu ul div :hover{
+  background-color: #838383 !important;
+  color: rgb(255, 255, 255);
+
+  transition: 0.3s ease-in-out;
+
+}
+.dropstart:hover{
+  background-color: #838383 !important;
+  color: rgb(255, 255, 255);
+
+  transition: 0.3s ease-in-out;
+
+}
+
 a:checked {
   background-color: #777777;
 }
@@ -517,7 +536,6 @@ a:checked {
     width: fit-content !important;
     margin-left: auto;
     margin-right: auto;
-    
   }
 
   .logo {
@@ -559,6 +577,15 @@ a:checked {
   }
 }
 
+@media only screen and (max-width: 800px) {
+  /* .dropdown-menu{
+    right: 35px !important;
+  } */
+  .threedot {
+    right: 35px !important;
+  }
+}
+
 .dropend {
   width: 215px;
   padding: 10px;
@@ -581,17 +608,18 @@ a:checked {
 }
 .dropstart:hover {
   /* background-color: #777777; */
-  background-color: #363636;
+  /* background-color: #363636; */
+  background-color: #cecece;
+
   color: rgb(255, 255, 255);
 
   transition: 0.3s ease-in-out;
 }
 
-nav div{
+nav div {
   cursor: pointer;
-  
 }
-aside div{
+aside div {
   cursor: pointer;
 }
 
@@ -615,4 +643,60 @@ aside div{
 }
 .dropdown-menu {
   transform: translate3d(130px, -70px, 0px) !important;
+  border: 1px solid #606060;
+  background-color: black;
 }
+.dropdown-item {
+  color: white;
+}
+
+.handle-logout-div {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+
+  color: white;
+}
+
+.nav-hidden-text {
+  margin-left: 8px;
+  font-size: 14px;
+}
+
+/* Dropup menu positioned at the right */
+.dropup-menu {
+  position: absolute;
+  bottom: 100%;
+  right: -64px;
+  background-color: #000000;
+  min-width: 140px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  padding: 5px;
+  width: 167px;
+  border: 1px solid #606060;
+}
+
+.dropup-menu button {
+  width: 100%;
+  background: none;
+  text-align: left;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding: 10px 5px;
+}
+
+.dropup-menu button:hover {
+  background-color: #40444b;
+}
+/* .logoimg{
+  width: 100vw !important;
+  padding: 1000px !important;
+  background-color: rgb(0, 0, 0);
+  z-index: 100;
+
+} */
